0.1.6
- support NumPy 1.11
- add tests to improve code coverage
- bugfixes:
  - wrong normalization for cplx array `v` in `correlate` if `normalize==True`
  - wrong normalization in `correlate_numpy` if `normalize==False`
0.1.5
- update documentation
- support Python 3
0.1.4
- integer and boolean input types are now automatically converted to floats
- `multipletau.correlate` now works with complex data types
- `multipletau.correlate` now checks if input data are same objects
- documentation now contains examples
0.1.3
- first non-cython implementation